templates/corda.template
AWSTemplateFormatVersion: 2010-09-09
Description: Corda Template
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: Network Configuration
        Parameters:
          - VPCID
          - PublicSubnet1ID
          - PublicSubnet2ID
          - RemoteAccessCIDR
      - Label:
          default: Corda EC2 Configuration
        Parameters:
          - EmailAddress
          - LegalName
          - KeyPairName
          - CordaAccessCIDR
          - InstanceType
      - Label:
          default: AWS Quick Start Configuration
        Parameters:
          - QSS3BucketName
          - QSS3KeyPrefix
    ParameterLabels:
      EmailAddress:
        default: Email address
      LegalName:
        default: Legal name
      KeyPairName:
        default: Key Pair Name
      PublicSubnet1ID:
        default: Public Subnet 1 ID
      QSS3BucketName:
        default: Quick Start S3 Bucket Name
      QSS3KeyPrefix:
        default: Quick Start S3 Key Prefix
      RemoteAccessCIDR:
        default: Allowed SSH Access CIDR
      CordaAccessCIDR:
        default: Allowed Cordalication Access CIDR
      VPCID:
        default: VPC ID
Parameters:
  EmailAddress:
   Description: Email address 
   Type: String
   AllowedPattern: ^(?:[a-z0-9!#$%&'*+\/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+\/=?^_`{|}~-]+)*|"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])$
   ConstraintDescription: Must be a valid email address.
  LegalName:
   Description: Legal Name 
   Type: String
  InstanceType:
    AllowedValues:
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
      - m3.large
      - m3.xlarge
      - m3.2xlarge
      - m4.large
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
    Default: t2.micro
    Description: Amazon EC2 instance type for the bastion instances
    Type: String
  KeyPairName:
    Description: >-
      Enter a Public/private key pair. If you do not have one in this region,
      please create it before continuing
    Type: 'AWS::EC2::KeyPair::KeyName'
  PublicSubnet1ID:
    Description: >-
      ID of the public subnet 1 that you want to provision the first bastion
      into (e.g., subnet-a0246dcd)
    Type: 'AWS::EC2::Subnet::Id'
  PublicSubnet2ID:
    Description: >-
      ID of the public subnet 2 you want to provision the second bastion into
      (e.g., subnet-e3246d8e)
    Type: 'AWS::EC2::Subnet::Id'
  QSS3BucketName:
    AllowedPattern: '^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$'
    ConstraintDescription: >-
      Quick Start bucket name can include numbers, lowercase letters, uppercase
      letters, and hyphens (-). It cannot start or end with a hyphen (-).
    Default: aws-quickstart
    Description: >-
      S3 bucket name for the Quick Start assets. Quick Start bucket name can
      include numbers, lowercase letters, uppercase letters, and hyphens (-). It
      cannot start or end with a hyphen (-).
    Type: String
  QSS3KeyPrefix:
    AllowedPattern: '^[0-9a-zA-Z-/]*$'
    ConstraintDescription: >-
      Quick Start key prefix can include numbers, lowercase letters, uppercase
      letters, hyphens (-), and forward slash (/).
    Default: quickstart-linux-bastion/
    Description: >-
      S3 key prefix for the Quick Start assets. Quick Start key prefix can
      include numbers, lowercase letters, uppercase letters, hyphens (-), and
      forward slash (/).
    Type: String
  RemoteAccessCIDR:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
    Description: Allowed CIDR block for external SSH access
    Type: String
  CordaAccessCIDR:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
    Description: Allowed CIDR block for external application access
    Type: String
  VPCID:
    Description: 'ID of the VPC (e.g., vpc-0343606e)'
    Type: 'AWS::EC2::VPC::Id'
Mappings:
  AWSAMIRegionMap:
    AMI:
      US1604HVM: ubuntu/images/hvm-ssd/ubuntu-xenial-16.04-amd64-server-20180405
    ap-northeast-1:
      US1604HVM: ami-60a4b21c
    ap-northeast-2:
      US1604HVM: ami-633d920d
    ap-south-1:
      US1604HVM: ami-dba580b4
    ap-southeast-1:
      US1604HVM: ami-82c9ecfe
    ap-southeast-2:
      US1604HVM: ami-2b12dc49
    ca-central-1:
      US1604HVM: ami-9d7afcf9
    eu-central-1:
      US1604HVM: ami-cd491726
    eu-west-1:
      US1604HVM: ami-74e6b80d
    eu-west-2:
      US1604HVM: ami-506e8f37
    sa-east-1:
      US1604HVM: ami-5782d43b
    us-east-1:
      US1604HVM: ami-6dfe5010
    us-east-2:
      US1604HVM: ami-e82a1a8d
    us-west-1:
      US1604HVM: ami-493f2f29
    us-west-2:
      US1604HVM: ami-ca89eeb2
Rules:
  SubnetsInVPC:
    Assertions:
      - Assert:
          'Fn::EachMemberIn':
            - 'Fn::ValueOfAll':
                - 'AWS::EC2::Subnet::Id'
                - VpcId
            - 'Fn::RefAll': 'AWS::EC2::VPC::Id'
        AssertDescription: All subnets must exist in the VPC
Conditions:
  GovCloudCondition: !Equals 
    - !Ref AWS::Region
    - us-gov-west-1
Resources:
  CordaSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enables SSH Access
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref RemoteAccessCIDR
        - IpProtocol: tcp
          FromPort: '10002'
          ToPort: '10002'
          CidrIp: !Ref CordaAccessCIDR
        - IpProtocol: tcp
          FromPort: '10003'
          ToPort: '10003'
          CidrIp: !Ref CordaAccessCIDR
       - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: !Ref CordaWebserverCIDR
        - IpProtocol: icmp
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: !Ref RemoteAccessCIDR
  CordaInstance:
    Type: 'AWS::EC2::Instance'
    Metadata:
      'AWS::CloudFormation::Init':
        configSets:
          corda_install:
            - corda_jar
            - run_install
        corda_jar:
          packages:
            apt:
              openjdk-8-jdk: []
              wget: []
          sources:
            /usr/src/corda: >-
              https://ci-artifactory.corda.r3cev.com/artifactory/corda-releases/net/corda/corda/3.1-corda/corda-3.1-corda.jar
          files:
            /home/ubuntu/install_corda.sh:
              source: !Sub
                - >-
                  https://s3.amazonaws.com/${QSS3BucketName}/${QSS3KeyPrefix}scripts/install_corda.sh
                - QSS3BucketName: !Ref QSS3BucketName
                  QSS3KeyPrefix: !Ref QSS3KeyPrefix
              mode: '000755'
              owner: root
              group: root
        run_install:
          commands:
            start_install:
              command: bash /home/ubuntu/install_corda.sh
    Properties:
      KeyName: !Ref KeyPairName
      ImageId: !FindInMap
        - AWSAMIRegionMap
        - !Ref 'AWS::Region'
        - US1604HVM
      InstanceType: !Ref InstanceType
      SecurityGroupIds:
        - !Ref CordaSecurityGroup
      SubnetId: !Ref PublicSubnet1ID
      UserData: !Base64
        Fn::Sub:
          - |
            #!/bin/bash -x
            #CFN Functions
            function cfn_fail
            {
            cfn-signal -e 1 --stack ${AWS::StackName} --region ${AWS::Region} --resource CordaInstance
            exit 1
            }
            function cfn_success
            {
            cfn-signal -e 0 --stack ${AWS::StackName} --region ${AWS::Region} --resource CordaInstance
            exit 0
            }
            S3URI=https://${QSS3BucketName}.${S3Region}.amazonaws.com/${QSS3KeyPrefix}
            NODE_CONF=${!S3URI}scripts/node.conf_stub
            echo \'[Cloning: Load QuickStart Common Utils]\'
            #Once Repo is public (Use quickstart-linux-utilities submodue)
            git clone -b develop https://github.com/aws-quickstart/quickstart-linux-utilities.git
            source /quickstart-linux-utilities/quickstart-cfn-tools.source
            echo \'[Loaded: Load QuickStart Common Utils]\'
            echo \'[Update Operating System]\'
            qs_update-os || qs_error
            qs_bootstrap_pipa || qs_error
            qs_aws-cfn-bootstrap || qs_error
            cfn-init -v --stack ${AWS::StackName} --resource CordaInstance --configsets corda_install --region ${AWS::Region} || cfn_fail
            # Generate node.conf
            wget ${!NODE_CONF} -O /opt/corda/node.conf
            sed -i "s/__EMAILADDRESS__/${EmailAddress}/g" /opt/corda/node.conf
            sed -i "s/__LEGALNAME__/${LegalName}/g" /opt/corda/node.conf
            sed -i "s/__IPADDRESS__/$(curl -s http://169.254.169.254/latest/meta-data/public-ipv4)/g" /opt/corda/node.conf
            # Signal cfn-init (final check)
            [ $(qs_status) == 0 ] && cfn_success || cfn_fail
          - S3Region: !If [ GovCloudCondition, s3-us-gov-west-1, s3 ]
Outputs:
  CordaInstancePublicDnsName:
    Value: !GetAtt
      - CordaInstance
      - PublicDnsName
    Description: Public DNS Name for the Corda Instance
  CordaInstancePublicIPAddress:
    Value: !Sub 'ubuntu@${CordaInstance.PublicIp}'
    Description: Public IP address for the Corda instance
